refactor(android): rewrite allowed hosts set initialization
use HashSet and unmodifiableSet for better compatibility across Android API levels